<resources>
    <string name="app_name">Milk Delight</string>
    <string name="rozer_pay">rzp_test_OjqPWNjTS6DCNH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_text">Login to your account</string>
    <string name="login_signup_txt">Don\'t have an account?</string>
    <string name="login_signup_txt1">Already have an account?</string>
    <string name="Sign_up">SignUp</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="signup_txt">Sign up for your account</string>
    <string name="Login_txt">Login</string>
    <string name="connection_title">No Internet connection</string>
    <string name="no_internet_connection_with_emoji">No internet connection 🤔</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="location_title">Location Service disabled</string>
    <string name="location_msg">Please enable location service. Location is mandatory to use this application.</string>
    <string name="something_went_wrong_warning_message">Something went wrong please try after few minutes!</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="google_api_realsekey">AIzaSyBQ-YSVmQS8h0Pv3hs_YwLZ65ifZqZ23X0</string>
    <string name="breakfast">Breakfast</string>
    <string name="title_activity_story">story</string>
    <string name="verify_sign_up"><![CDATA[Verify & SIGN UP]]></string>
    <string name="verify_proceed"><![CDATA[Verify & PROCEED]]></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp_send_to">Enter OTP send to</string>
    <string name="don_t_reeive_the_otp">Don\'t receive the OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="submit">submit</string>
    <string name="skip">SKIP</string>
    <string name="if_you_have_any_refer_code_enter_here">If you Have Any Refer Code Enter Here</string>
    <string name="enter_refer_code">Enter Refer Code</string>
    <string name="welcome_to_milkdelight">Welcome To MilkDelight</string>
    <string name="in_publishing_and_graphic_design_loren_ipsum_is_a_placeholder_text_commonly">In publishing and graphic design,\n Loren ipsum is a placeholder text commonly.</string>
    <string name="login1">Login.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_email_id_phone_number">Enter Email Id/Phone Number</string>
    <string name="reset_password">Reset Password?</string>
    <string name="generate_a_new_password">Generate a New Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="facebook_app_id">991462281364752</string>
    <string name="fb_login_protocol_scheme">fb991462281364752</string>
    <string name="cashfree_api_key">734871d9e8794ccdd648c950c78437</string>
    <string name="cashfree_key_secret">09b9a7fc1a8abf9dcead92d88ae10c810ed57c6c</string>
    <string name="myprofile">My Profile</string>
    <string name="myorder">My Order</string>
    <string name="Offer">Offer</string>
    <string name="shopByCat">Shop By Category</string>
    <string name="rate">Rate Our App</string>
    <string name="contact">Contact us</string>
    <string name="referFriend">Refer a Friend</string>
    <string name="about">About us</string>
    <string name="faq">Faq</string>
    <string name="faq1">FAQ</string>
    <string name="notification">Notification</string>
    <string name="Home">Home</string>
    <string name="subscription">Subscription</string>
    <string name="mysubscription">My Subscription</string>
    <string name="wallet">Wallet</string>
    <string name="mywallet">My Wallet</string>
    <string name="cart">Cart</string>
    <string name="log_out">LOG OUT</string>
    <string name="change_password12"><u>Change Password?</u></string>
    <string name="txt_pause">Your Order is cancel on this day</string>
    <string name="txt_pending">Your Order is Pending</string>
    <string name="txt_delivered">Your Order is Successfully Delivered</string>
    <string name="search">search here</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="order">Your Order</string>
    <string name="invite_text">Invite Your Friend and get\n<b> ₹.38 </b> in your wallet</string>
    <string name="invite_txtt">Invite Your Friend and get\n</string>
    <string name="invite_wallet_txt">in your wallet</string>
    <string name="invitation_extended_title"> Refer and Earn</string>
    <string name="invitation_subject">"please use this refer link to earn "</string>
    <string name="seconds_ago">%1$d seconds ago</string>
    <string name="min_ago">%1$d minute ago</string>
    <string name="mins_ago">%1$d minutes ago</string>
    <string name="hour_ago">%1$d hour ago</string>
    <string name="new_hours_ago">%1$d hours ago</string>
    <string name="day_ago">%1$d day ago</string>
    <string name="new_days_ago">%1$d days ago</string>
    <string name="pay_txt">Pay </string>
    <string name="pay_txt1"> by clicking the button below </string>
    <string name="sample_checkout_page">Sample Checkout Page</string>
    <string name="exit_msg">Press Back twice to exit</string>
    <string name="logout_title">Logout</string>
    <string name="delete_title">Remove Item</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="delete_msg">Are you sure want to remove this item?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="enter_coupon">please enter the Coupon Code</string>
    <string name="payment_success">Payment Success</string>
    <string name="payment_by_wallet">Payment done through your Wallet amount</string>
    <string name="product_list">Product Listing</string>
    <string name="qty">Qty : </string>
    <string name="best_selling_product">Best Selling Product</string>
    <string name="see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="best_product">Best Product</string>
    <string name="no_data_found">No data Found</string>
    <string name="add_new_subscriptions">+ADD NEW SUBSCRIPTIONS</string>
    <string name="pause">paused</string>
    <string name="resume">Resume</string>
    <string name="subscriptiondot">Subscription :</string>
    <string name="view_delivery_schedule">View Delivery Schedule</string>
    <string name="modify">Modify</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="renew_your_subscription">RENEW YOUR SUBSCRIPTION</string>
    <string name="view_all_transaction">View All Transaction</string>
    <string name="total_balance">Total Balance</string>
    <string name="we_suggest_an_average_of_rs_4100">We suggest an average of between Rs.1000 to Rs.3000</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_money">+ADD MONEY</string>
    <string name="_500">+500</string>
    <string name="_1000">+1000</string>
    <string name="_2000">+2000</string>
    <string name="_3000">+3000</string>
    <string name="addtowallet">add to wallet From : </string>
    <string name="deductfromwallet">deduct From : </string>
    <string name="transacrtionid">Transaction Id : </string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="price_details">Price Details</string>
    <string name="bag_total">Bag Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="total">Total</string>
    <string name="order_once">ORDER ONCE</string>
    <string name="buy_subscription">BUY SUBSCRIPTION</string>
    <string name="pay_now">PAY NOW</string>
    <string name="upi">Upi</string>
    <string name="amazon">Amazon</string>
    <string name="billpay_web">Billpay Web</string>
    <string name="gpay">Gpay</string>
    <string name="phonepe">PhonePe</string>
    <string name="check_phonepe">Check PhonePe</string>
    <string name="gpay_ready">GPay Ready</string>
    <string name="milk_delight_balance">Milk Delight Balance</string>
    <string name="your_balance_is">your balance is</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="product_size">Product Size</string>
    <string name="clear">CLEAR</string>
    <string name="apply">APPLY</string>
    <string name="select_sort_type">Select Sort Type</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="your_address">Your Address</string>
    <string name="myaddress">My Address</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="add_address">Add Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="house_no_building_name">House No,Building Name</string>
    <string name="road_name_area_colony">Road Name,Area ,Colony</string>
    <string name="state">state</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="picode">Picode</string>
    <string name="save">SAVE</string>
    <string name="edit_address">Edit Address</string>
    <string name="or">OR</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_on">Delivery On</string>
    <string name="type">Type</string>
    <string name="fat">Fat</string>
    <string name="weight">Weight</string>
    <string name="schedule">SCHEDULE</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="milk_type">Milk Type</string>
    <string name="rate1">Ratings</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="change_pass">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_password1">Re-Enter Password</string>
    <string name="write_your_reason">Write Your Reason</string>
    <string name="enter_meassage_here">Enter Meassage Here</string>
    <string name="email_address">Email Address</string>
</resources>