<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_merchant"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_15sdp"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingRight="@dimen/_15sdp"
    android:paddingTop="@dimen/_15sdp"
    tools:context=".CashFreeActivity">

    <TextView
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/main_clr"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/sample_checkout_page"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />
    <TextView
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/main_clr"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/_14sdp" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_marginTop="@dimen/_112sdp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/upi"
            android:id="@+id/upi"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"/>


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/amazon"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/amazon"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/web"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/billpay_web"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/gpay"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/gpay"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/phonePe"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/phonepe"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/phonePe_exists"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/check_phonepe"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/gpay_ready"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bluebtn"
            android:text="@string/gpay_ready"/>
    </LinearLayout>
</RelativeLayout>