<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:background="@color/main_clr"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/change_pass" />

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:textColor="@color/main_clr"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:id="@+id/edOldPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_grey"
                android:hint="@string/enter_old_password"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:textColor="@color/main_clr"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:id="@+id/edNewPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_grey"
                android:hint="@string/enter_new_password"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:textColor="@color/main_clr"
                android:fontFamily="@font/ubuntu_medium"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:id="@+id/edReEnPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/bg_grey"
                android:hint="@string/re_enter_password1"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <Button
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/btnSavePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/main_clr"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

