<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:background="@color/main_clr"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/email_address" />


        <EditText
            android:textColor="@color/main_clr"
            android:fontFamily="@font/ubuntu_medium"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/bg_grey"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/main_clr"
            android:text="@string/apply"
            android:textColor="#FFF" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
