<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:background="@color/main_clr"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/write_your_reason" />

        <EditText
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textMultiLine"
            android:lines="2"
            android:minLines="1"
            android:maxLines="4"
            android:textColorHint="@color/small_title_clr"
            android:textColor="@color/main_clr"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:id="@+id/edMsg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/bg_grey"
            android:hint="@string/enter_meassage_here"
            android:gravity="left|top"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/main_clr"
            android:text="@string/apply"
            android:textColor="#FFF" />
    </LinearLayout>
</androidx.cardview.widget.CardView>